conditional expectation writeup

--- a/docs/6601fe70945565fbed6d70696b21c269a949007e/dsan-globals/jjstyles.css
+++ b/docs/6601fe70945565fbed6d70696b21c269a949007e/dsan-globals/jjstyles.css
@@ -6,6 +6,10 @@ a.disabled {
   pointer-events: none;
 }
 
+.aside-80 aside {
+  font-size: 1.3rem !important;
+}
+
 .border-all td {
   border: 1px solid black !important;
 }
