--- a/docs/6601fe70945565fbed6d70696b21c269a949007e/dsan-globals/jjstyles.css
+++ b/docs/6601fe70945565fbed6d70696b21c269a949007e/dsan-globals/jjstyles.css
@@ -37,10 +37,10 @@ a.disabled {
 .cb1-bg {
     background-color: rgb(230, 159, 0) !important;
 }
-/* .cb1a-bg {
-    background-color: $cb1-alpha !important;
-    text-align: center !important;
-} */
+.cb1a-bg {
+  background-color: rgba(230, 159, 0, 0.333) !important;
+  text-align: center !important;
+}
 .cb2 {
   /* #56B4E9 */
   color: rgb(86, 180, 233) !important;
@@ -48,20 +48,20 @@ a.disabled {
 .cb2-bg {
     background-color: rgb(86, 180, 233) !important;
 }
-/* .cb2a-bg {
-    background-color: $cb2-alpha !important;
+.cb2a-bg {
+    background-color: rgba(86, 180, 233, 0.333) !important;
     text-align: center !important;
-} */
+}
 .cb3 {
     color: rgb(0, 158, 115) !important;
 }
 .cb3-bg {
     background-color: rgb(0, 158, 115) !important;
 }
-/* .cb3a-bg {
-    background-color: $cb3-alpha !important;
+.cb3a-bg {
+    background-color: rgba(0, 158, 115, 0.333) !important;
     text-align: center !important;
-} */
+}
 .cb4 {
     color: #F0E442 !important;
 }
@@ -71,10 +71,10 @@ a.disabled {
 .cbg-bg {
     background-color: rgb(211, 211, 211) !important;
 }
-/* .cbga-bg {
-    background-color: $cbg-alpha !important;
+.cbga-bg {
+    background-color: rgba(211, 211, 211, 0.333) !important;
     text-align: center !important;
-} */
+}
 
 .crunch-blockquote blockquote {
   margin-top: 0px !important;
@@ -171,6 +171,10 @@ figcaption {
   height: 375px !important;
 }
 
+.fix-tex-headers th {
+  font-size: 1em !important;
+}
+
 .inline-90 .math.inline {
   font-size: 90% !important;
 }
@@ -229,6 +233,13 @@ figcaption {
 .sidebar-subtitle {
   font-size: 12pt !important;
   line-height: 0.7em !important;
+}
+
+.small-tex-td {
+    font-size: 2.0rem !important;
+}
+.small-tex-th {
+    font-size: 2.0rem !important;
 }
 
 .small-title h1 {
