--- a/docs/6601fe70945565fbed6d70696b21c269a949007e/dsan-globals/jjstyles.css
+++ b/docs/6601fe70945565fbed6d70696b21c269a949007e/dsan-globals/jjstyles.css
@@ -324,10 +324,12 @@ table thead th {
   font-size: 95% !important;
 }
 
+.title-08 h2, .title-08 h1 {
+  font-size: calc(0.8 * var(--r-heading2-size)) !important;
+}
 .title-09 h2, .title-09 h1 {
   font-size: calc(0.9 * var(--r-heading2-size)) !important;
 }
-
 .title-10 h2, .title-10 h1 {
   font-size: calc(1.0 * var(--r-heading2-size)) !important;
 }
